Bug 161083 - CRASH: closing the document
Summary: CRASH: closing the document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-05-15 07:45 UTC by Xisco Faulí
Modified: 2024-05-15 18:56 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-05-15 07:45:06 UTC
Steps to reproduce:
1. Open attachment 80961 [details] from bug 65866
2. Close LibreOffice

-> Crash

Reproduced in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a525895a5f820350dc307969b1e8fd5d218a1ddd
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2024-05-15 07:45:47 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.com>	2024-05-14 08:28:33 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2024-05-14 12:08:31 +0200
commit 6885dcd7ec7b82a946d8344bfc27a3e88eecc44a (patch)
tree 7278faa36ef6dc26145ab6405bf65d06e1370392
parent 204c5e14188022f34afb05776eb20669b01ea6d4 (diff)
tdf#160984 sw continuous endnotes: switch to a section-based layout

Bisected with: bibisect-linux64-24.8
Comment 2 Miklos Vajna 2024-05-15 07:56:44 UTC
Let me see.
Comment 3 Commit Notification 2024-05-15 14:55:07 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/82dd81a9d2049ac95535880fc67c1867f90e1427

tdf#161083 sw continuous endnotes: fix layout with a section at doc end

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.